# Nyx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.ps1
.github/workflows/: release.yml
docs/: .gitignore  README.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: CopyForLLM.vue  index.js
docs/embedding/: bytecode.md  c-api.md  getting-started.md  host-functions.md  native-modules.md
docs/guide/: classes.md  collections.md  control-flow.md  coroutines.md  error-handling.md  functions.md  hello-world.md  installation.md  introduction.md  modules.md  packages.md  pattern-matching.md  variables.md
docs/public/: install.sh  nyx-llm-reference.txt  registry.txt
docs/reference/: list-methods.md  map-methods.md  set-methods.md  stdlib.md  string-methods.md
include/: nyx.h
src/: api.c  chunk.c  chunk.h  collections.c  collections.h  common.h  compiler.c  compiler.h  debug.c  debug.h  manifest.c  manifest.h  memory.c  memory.h  nyx_stdlib.c  nyx_stdlib.h  object.c  object.h  repl.c  repl.h  scanner.c  scanner.h  table.c  table.h  types.c  types.h  value.c  value.h  vm.c  vm.h
tools/: nyx.c
